root/static/styles/layout.css
/* ... */
/* Paginator */
.pageselector a, .pageselector span {
    font-size: 90%;
    padding: 0.05em 0.4em;
}

.pageselector a {
    border: solid 1px #000;
    text-decoration: none;
    background-color: #FFF;
    color: #000;
}

.pageselector a:hover {
    background-color: #FFBA58;
}

.pageselector a.sel {
    background-color: #FFBA58;
    font-weight: bold;
}

.pageselector span {
    border: solid 1px #999999;
    background-color: #EEEEEE;
    color: #999999;
}

.pageselector em {
    font-style: normal;
    margin-left: 0.5em;
}

.pageselector + .tbl {
    margin-top: 0px !important;
}

.pageselector-results {
    margin-bottom: 0;
}

/* Browse Entity pages */
.browse-entities {
    margin-top: 1em;
}

.browse-entities ol {
    margin: 0;
}

.browse {
    margin-top: 0.5em;
}

.browse td {
    text-align: center;
    padding: 2px;
}

.browse td.char {
    width: 0.7em;
}

/* Entity details & edit details */
table.details th {
    text-align: right;
    padding-left: 10pt;
    width: 160px;
    vertical-align: top;
}

table.details td span.new,
table.details td.new {
    background: #E8F7E8;
}

div.diff .diff-only-b,
span.diff-only-b,
tr.diff-addition {
    background: #B1EBB0;
}

table.details td span.old,
table.details td.old {
    background: #F7E8E8;
}

div.diff .diff-only-a,
span.diff-only-a,
tr.diff-removal {
    background: #EBB1BA;
}

table.details td span.new,
table.details td span.old,
table.details td.new,
table.details td.old {
    border: 1px solid #CCC;
}

/* Statistics pages */
table.timeline-controls, table.database-statistics {
    border-collapse: collapse;
    border: 1px solid #ADB9CC;
    margin: 1em 1em 1em 0;
}

table.database-statistics {
    white-space: nowrap;
}

table.database-statistics th, table.timeline-controls th {
    text-align: left;
    padding: 3px 5px;
}

table.database-statistics tr.thead th {
    text-align: center;
    border: 1px solid #ADB9CC;
    background: #F1F1F1;
}

table.database-statistics td, table.timeline-controls td {
    text-align: right;
    padding: 3px 5px 3px 10px;
}

table.timeline-controls td {
    border: 1px solid #ADB9CC;
}


/* Sidebar properties */
dl.properties {
    margin: 0;
}

dl.properties dt {
    clear: left;
    float: left;
    font-weight: bold;
    padding-right: 2pt;
}

dl.properties dd,
dl.properties dt {
    line-height: 175%;
}

/* Search Plugins */
dl.search-plugins dt {
    font-weight: bold;
}

dl.search-plugins dt,
dl.search-plugins dd {
    line-height: 200%;
}

div.searchform input#id-query { width: 30em }

/* CSS columns (instead of using tables) */
div.columns-2 div.column {
    float: left;
    width: 50%;
    min-width: 300px;
}
div.columns-3 div.column {
    float: left;
    width: 33.3%;
    min-width: 200px;
}
div.columns-4 div.column {
    float: left;
    width: 25%;
    min-width: 150px;
}
div.columns-5 div.column {
    float: left;
    width: 20%;
    min-width: 120px;
}

.nagpanel {
    background-color: #FAFAFA;
    border: 2px dashed #736DAB;
    padding: 0 1em;
    margin: 1em 0;
}

.nagpanel .naglinkpanel { text-align: center; }
.nagpanel .naglink { font-size: 200%; }

p.cleanup {
    text-align: center;
    background: #FD9 !important;
    padding: 1em;
}

.iswc { white-space: nowrap; }

/*
  Cover Art
  ================================================
*/

div.artwork-cont {
    border-radius: 2px;
    background: #eee;
    border: 1px solid #e0e0e0;
    display: inline-block;
    padding: 10px;
    margin: 5px;
    text-align: center;
}

div.artwork { position: relative; width: 250px; }
/* don't include 'div' since this should apply to 'p' as well */
.artwork img { max-width: 250px; max-height: 250px; }

.homepage div.artwork-cont {
    width: 125px;
    height: 125px;
    position: relative;
}
.homepage div.artwork {
    width: 125px;
    height: 125px;
    display: table-cell;
    vertical-align: middle;
}
.homepage div.artwork img {
    max-width: 125px;
    max-height: 125px;
}

div.delete { display: hidden !important; }

.annotation-toggle {
    display: block;
}

.annotation-body {
    position: relative;
    overflow: auto;
}

.annotation-collapsed {
    max-height: 100px;
    overflow: hidden;
}

.annotation-collapsed:after {
    display: block;
    position: absolute;
    bottom: 0;
    width: 100%;
    content: "  ";
    height: 20px;
    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
    background: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
}

.annotation-collapse {
    max-height: none;
}

span.release-group-type {
    background: #589DFF;
    color: #fff;
    border-radius: 3px;
    padding: 0 3px;
}

a.tagger-icon {
    background: url('../images/icons/mblookup-tagger.png') no-repeat;
    width: 41px;
    height: 16px;
}

